# advent-of-code-2025

./: .gitignore  CMakeLists.txt  README.md
public/: answer.h  problem.h  solver.h
scripts/: problem.cpp.j2  problem.h.j2  problem_generator.py
src/: answer.cpp  main.cpp  solver.cpp
src/problems/day01/: problem_01.cpp  problem_01.h
src/problems/day02/: problem_02.cpp  problem_02.h  test.txt
src/problems/day03/: problem_03.cpp  problem_03.h
src/problems/day04/: problem_04.cpp  problem_04.h
src/problems/day05/: problem_05.cpp  problem_05.h
src/problems/day06/: problem_06.cpp  problem_06.h
src/problems/day07/: problem_07.cpp  problem_07.h
src/problems/day08/: problem_08.cpp  problem_08.h
src/problems/day09/: problem_09.cpp  problem_09.h
src/problems/day10/: problem_10.cpp  problem_10.h
src/problems/day11/: problem_11.cpp  problem_11.h
src/problems/day12/: problem_12.cpp  problem_12.h
test/: CMakeLists.txt  main.cpp
test/extra_tests/day01/: extra_test_1.txt  extra_test_2.txt
test/support/: answer_comparator.cpp  answer_comparator.h  string_from.cpp  string_from.h
test/tests/: answer_tests.cpp  day_01_tests.cpp  day_02_tests.cpp  day_03_tests.cpp  day_04_tests.cpp  day_05_tests.cpp  day_06_tests.cpp  day_07_tests.cpp  day_08_tests.cpp  day_09_tests.cpp  day_10_tests.cpp  day_11_tests.cpp  day_12_tests.cpp
utils/: CMakeLists.txt  aoc.grid.ixx  aoc.math.ixx  aoc.matrix.ixx  aoc.parse.ixx  aoc.regex.ixx  aoc.string.ixx
utils/math/: math_utils.combinatorics.cppm  math_utils.cppm  math_utils.linear_algebra.cppm  math_utils.simple.cppm
utils/parse/: aoc.parse.cppm  aoc.parse.impl.cppm
utils/test/tests/: aoc_parse_tests.cpp
utils/test/tests/math/: math_utils_simple_tests.cpp
